...
                                                <connections>
                                                    <segue destination="JLO-vd-LUw" kind="presentation" identifier="InformationView" id="1a7-85-9Tt"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="802" verticalHuggingPriority="802" horizontalCompressionResistancePriority="802" verticalCompressionResistancePriority="802" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConst
                                                <rect key="frame" x="267.33333333333331" y="0.0" width="93.666666666666686" height="25.666666666666668"/>
                                                <state key="normal" title="Next"/>
                                                <connections>
                                                    <action selector="showNextRecipeWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4dP-S4-cMr"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
...
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="nrX-oh-e3o"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Information" id="hmq-QN-4FU">
                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="Fs9-5O-a2i">
                            <connections>
                                <segue destination="yjs-m3-vua" kind="unwind" unwindAction="dismissInformationViewControllerWithSender:" id="fFW-kl-Gsa"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
